[project]
name = "pykv"
version = "0.1.0"
description = "Lightweight Key-Value Store"
authors = [{ name = "DjCodepulse" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "pydantic>=2.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
pykv = "pykv.cli:app"

[tool.setuptools]
packages = ["pykv"]